[gd_scene load_steps=3 format=3 uid="uid://cvek8s1fxdfmt"]

[ext_resource type="Script" uid="uid://c0ckdqsxtffs0" path="res://addons/diisis/editor/src/file_config_container.gd" id="1_yn2ca"]
[ext_resource type="PackedScene" uid="uid://dybsbden6coq5" path="res://addons/diisis/editor/src/address_mode_button.tscn" id="2_t4wj7"]

[node name="FileConfigContainer" type="Control"]
auto_translate_mode = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yn2ca")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 0

[node name="Editor" type="PanelContainer" parent="TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Editor"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Editor/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Editor/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Default Page Address Mode"

[node name="AddressModeButtonPage" parent="TabContainer/Editor/VBoxContainer/HBoxContainer" instance=ExtResource("2_t4wj7")]
layout_mode = 2

[node name="ToggleSettings" type="VBoxContainer" parent="TabContainer/Editor/VBoxContainer"]
layout_mode = 2

[node name="Appearance" type="PanelContainer" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="StringSettings" type="VBoxContainer" parent="TabContainer/Appearance"]
layout_mode = 2

[connection signal="mode_set" from="TabContainer/Editor/VBoxContainer/HBoxContainer/AddressModeButtonPage" to="." method="_on_address_mode_button_page_mode_set"]
